Fixed navbar close on click outside on mobile

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -29,13 +29,7 @@ mark {
 }
 
 @media (max-width: 900px) {
-  html {
-    height  : 100%;
-    overflow: hidden;
-  }
   body {
-    height  : 100%;
-    overflow: auto;
     cursor: pointer;
   }
 }
